--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,4 +1,7 @@
 <section class="bg-intro">
+  <div class="mainbrand">
+    <img src="/bb_mainbrand_light_24.svg" alt="Bachblyten Festival Hauptlogo">
+  </div>
   <div class="scroll-hint">
     <p class="eyebrow">Sonne geht auf</p>
     <span>Scroll für das Programm ↓</span>
