--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,14 +1,14 @@
 <nav class="nav">
-  <div class="logo">
-    <img src="/bb21-madamme.svg" alt="Bachblyten Logo">
+  <div class="logo" href="/" routerLink="/">
+    <img src="/bb_mainbrand_light_01.svg" alt="Bachblyten Logo" />
     <div class="wordmark">
-      <span class="logo-text">Bachblyten</span>
+      <span class="logo-text">BACHBLYTEN</span>
       <span class="subline">24–26 Jul 2026 · Flugplatz Schwesing</span>
     </div>
   </div>
 
   <div class="nav-actions">
-    <a class="cta secondary ghost" routerLink="/line-up">Line-Up Sneak</a>
+    <!-- <a class="cta secondary ghost" routerLink="/line-up">Line-Up Sneak</a> -->
     <button
       class="menu-button"
       type="button"
