--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,10 +1,12 @@
 <section class="bg-intro">
   <div class="mainbrand">
-    <img src="/bb_mainbrand_light_24.svg" alt="Bachblyten Festival Hauptlogo">
-  </div>
-  <div class="scroll-hint">
-    <p class="eyebrow">Sonne geht auf</p>
-    <span>Scroll für das Programm ↓</span>
+    <img src="/bb_mainbrand_light_24.svg" alt="Bachblyten Festival Hauptlogo" />
+    <p class="date">24 – 26 Juli 2026</p>
+    <p class="where">Flugplatz Schwesing</p>
+
+    <div class="sell-more-tickets">
+      <app-spark-button routerLink="/tickets" label="ZUM TICKET SHOP"></app-spark-button>
+    </div>
   </div>
 </section>
 
@@ -24,7 +26,6 @@
       Lichtwelten, viel Deko-Liebe und endlosen Sunrise-Sets.
     </p>
     <div class="hero-actions">
-      <a class="cta massive" routerLink="/tickets">Tickets</a>
       <a class="cta secondary" routerLink="/line-up">Line-Up entdecken</a>
     </div>
     <div class="hero-grid">
@@ -87,7 +88,15 @@
       src="https://www.youtube.com/embed/UAHgHB7qQTk"
       title="Bachblyten Aftermovie"
       frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allow="
+        accelerometer;
+        autoplay;
+        clipboard-write;
+        encrypted-media;
+        gyroscope;
+        picture-in-picture;
+        web-share;
+      "
       allowfullscreen
     ></iframe>
   </div>
