--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -31,7 +31,7 @@
     <div class="menu-header">
       <div>
         <p class="eyebrow">Bunt. Ungebändigt.</p>
-        <h3>Wo triffst du als nächstes?</h3>
+        <h3>Was interessiert dich?</h3>
       </div>
       <a class="cta" routerLink="/tickets" (click)="closeMenu()">Tickets sichern</a>
     </div>
