--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,6 +65,11 @@ img {
   display: block;
 }
 
+.cta-row {
+  margin-top: 24px;
+  text-align: center;
+}
+
 .page-shell {
   position: relative;
   padding: 120px 6vw 120px;
