--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -26,6 +26,11 @@
     border-color: var(--accent-lime);
     box-shadow: 0 10px 30px rgba(91, 224, 255, 0.25);
   }
+
+  @media (max-width: 600px) {
+    padding: 8px;
+    border: 0px;
+  }
 }
 
 .logo img {
@@ -43,11 +48,19 @@
   font-family: 'Helvetica Now Display', sans-serif;
   letter-spacing: 0.02em;
   font-size: 20px;
+
+  // hide on mobile
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
 
 .subline {
   font-size: 12px;
   color: var(--text-muted);
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
 
 .nav-actions {
