--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: space-between;
   z-index: 40;
-  mix-blend-mode: lighten;
+  // mix-blend-mode: lighten;
   margin: 0 auto 48px;
   max-width: 1410px;
 }
@@ -16,21 +16,33 @@
   align-items: center;
   gap: 12px;
   padding: 8px 12px;
-  // background: linear-gradient(120deg, rgba(255, 255, 255, 0.08), rgba(11, 13, 28, 0.6));
+  background: transparent;
+  transition:
+    background 0.3s ease,
+    transform 0.2s ease,
+    border-color 0.25s ease,
+    box-shadow 0.3s ease;
   border-radius: 20px;
   border: 1px solid var(--border-glow);
-  box-shadow: var(--shadow-soft);
   cursor: pointer;
   &:hover {
     transform: translateY(-1px);
     border-color: var(--accent-lime);
     box-shadow: 0 10px 30px rgba(91, 224, 255, 0.25);
+    box-shadow: var(--shadow-soft);
   }
 
   @media (max-width: 600px) {
     padding: 8px;
     border: 0px;
   }
+}
+
+.nav.scrolled .logo {
+  background: rgba(12, 16, 36, 0.33);
+  backdrop-filter: blur(3px);
+  box-shadow: 0 14px 40px rgba(0, 0, 0, 0.35);
+  border-color: rgba(255, 255, 255, 0.3);
 }
 
 .logo img {
@@ -84,19 +96,28 @@
   padding: 10px 14px;
   border-radius: 16px;
   border: 1px solid var(--border-glow);
-  background: rgba(12, 16, 36, 0.8);
+  background: transparent;
   color: var(--text-main);
   cursor: pointer;
   transition:
     transform 0.25s ease,
     border-color 0.25s ease,
-    box-shadow 0.3s ease;
+    box-shadow 0.3s ease,
+    background 0.3s ease;
 }
 
 .menu-button:hover {
   transform: translateY(-1px);
   border-color: var(--accent-lime);
   box-shadow: 0 10px 30px rgba(91, 224, 255, 0.25);
+}
+
+.nav.scrolled .menu-button {
+  background: rgba(12, 16, 36, 0.33);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+  box-shadow: 0 14px 40px rgba(0, 0, 0, 0.35);
+  border-color: rgba(255, 255, 255, 0.3);
 }
 
 .menu-button svg {
@@ -154,7 +175,7 @@
   border-radius: var(--radius-lg);
   padding: 18px;
   box-shadow: var(--shadow-soft);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(3px);
 }
 
 .menu-header {
