--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,7 +8,7 @@
         Jahr noch wilder wird.
       </p>
       <div class="chip-row">
-        <span class="tag">24–26 Jul 2026</span>
+        <span class="tag">24 – 26.07.2026</span>
         <span class="tag">Flugplatz Schwesing</span>
       </div>
     </div>
