--- a/src/app/components/background/background.component.scss
+++ b/src/app/components/background/background.component.scss
@@ -2,7 +2,7 @@
   position: fixed;
   inset: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
   z-index: 0;
   pointer-events: none;
@@ -12,7 +12,7 @@
   position: absolute;
   inset: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   object-fit: cover;
   filter: saturate(1.05);
 }
@@ -29,7 +29,7 @@
   object-fit: contain;
   object-position: center bottom;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   opacity: 1;
 }
 
