--- a/src/app/components/spark-button/spark-button.component.scss
+++ b/src/app/components/spark-button/spark-button.component.scss
@@ -32,7 +32,10 @@ $spot-count: 52;
     transform 0.25s ease,
     box-shadow 0.35s ease,
     background-position 0.9s ease;
-  background-position: 100% 40%;
+  background-position: 50% 28%;
+
+  background-image: url('/Sonne_Layer_mitte_scrolleffect.png');
+  background-size: 1000px;
 }
 
 .spark-btn:hover {
