--- a/src/app/pages/tickets/tickets.component.scss
+++ b/src/app/pages/tickets/tickets.component.scss
@@ -15,15 +15,17 @@
 .iframe-wrap {
   position: relative;
   width: 100%;
-  min-height: 1500px;
-  border: 1px dashed var(--border-glow);
-  border-radius: var(--radius-lg);
+  min-height: 100px;
+  border: 0px dashed var(--border-glow);
+  // border-radius: var(--radius-lg);
   overflow: hidden;
   background: rgba(0, 0, 0, 0.35);
 }
 
 .paylogic {
   margin-top: 50px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .iframe-wrap iframe {
