--- a/src/app/pages/tickets/tickets.component.scss
+++ b/src/app/pages/tickets/tickets.component.scss
@@ -12,6 +12,10 @@
   font-size: 14px;
 }
 
+.section-heading {
+  padding-left: 32px;
+}
+
 .iframe-wrap {
   position: relative;
   width: 100%;
@@ -20,12 +24,16 @@
   // border-radius: var(--radius-lg);
   overflow: hidden;
   background: rgba(0, 0, 0, 0.35);
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
 }
 
 .paylogic {
   margin-top: 50px;
+  margin-bottom: 0px;
   padding-left: 0px;
   padding-right: 0px;
+  padding-bottom: 0px;
 }
 
 .iframe-wrap iframe {
@@ -42,4 +50,17 @@
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 12px;
   margin-top: 14px;
+}
+
+.problem-link {
+  color: var(--accent);
+  text-decoration: underline;
+  color: var(--accent-lime);
+}
+
+.problem-text {
+  padding: 5px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
