style(tickets): Improves responsiveness
Improves the responsiveness of the tickets page by adjusting padding on smaller screens and hiding the eyebrow element. This enhances the user experience on mobile devices.

--- a/src/app/pages/tickets/tickets.component.scss
+++ b/src/app/pages/tickets/tickets.component.scss
@@ -14,6 +14,16 @@
 
 .section-heading {
   padding-left: 32px;
+  @media (max-width: 600px) {
+    padding-left: 24px;
+  }
+}
+
+.eyebrow {
+  // hide on small screens
+  @media (max-width: 600px) {
+    display: none;
+  }
 }
 
 .iframe-wrap {
