Refactor(landing): Updates landing page content
Updates the landing page highlights and timeline
with new content, reflecting the event's focus on
new beginnings, musical diversity and a stage for
newcomers.

Updates Instagram links in the footer and gallery.

Increases the minimum width of timeline items on landing page.
Removes unnecessary animation ease.

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -29,11 +29,20 @@
         Festivalfunk Anmeldung
       </button>
       <div class="chip-row socials">
-        <a href="https://www.instagram.com" target="_blank" rel="noreferrer" class="tag"
+        <a
+          href="https://www.instagram.com/bachblyten/?hl=de"
+          target="_blank"
+          rel="noreferrer"
+          class="tag"
           >Instagram</a
         >
-        <a href="https://www.youtube.com" target="_blank" rel="noreferrer" class="tag">YouTube</a>
-        <a href="https://www.facebook.com" target="_blank" rel="noreferrer" class="tag">Facebook</a>
+        <a
+          href="https://www.youtube.com/channel/UCg07bdy2yv3QFQ-cTQKoAnA"
+          target="_blank"
+          rel="noreferrer"
+          class="tag"
+          >YouTube</a
+        >
       </div>
     </div>
   </div>
