--- a/src/app/pages/gallery/gallery.component.html
+++ b/src/app/pages/gallery/gallery.component.html
@@ -8,7 +8,13 @@
     offiziellen Instagram-Embed ein – das Layout ist vorbereitet.
   </p>
   <div class="section-grid gallery-grid">
-    <a class="card post" *ngFor="let post of posts" [href]="post.url" target="_blank" rel="noreferrer">
+    <a
+      class="card post"
+      *ngFor="let post of posts"
+      [href]="post.url"
+      target="_blank"
+      rel="noreferrer"
+    >
       <div class="image" [style.background-image]="'url(' + post.image + ')'"></div>
       <div class="meta">
         <span class="tag">{{ post.handle }}</span>
@@ -18,7 +24,12 @@
     </a>
   </div>
   <div class="cta-row">
-    <a class="cta secondary" href="https://www.instagram.com" target="_blank" rel="noreferrer">
+    <a
+      class="cta secondary"
+      href="https://www.instagram.com/bachblyten/?hl=de"
+      target="_blank"
+      rel="noreferrer"
+    >
       Zum Instagram-Feed
     </a>
   </div>
