--- a/src/app/components/newsletter-modal/newsletter-modal.component.scss
+++ b/src/app/components/newsletter-modal/newsletter-modal.component.scss
@@ -209,6 +209,12 @@
   margin-bottom: 4px;
 }
 
+.fineprint {
+  margin-top: 10px;
+  font-size: 13px;
+  color: var(--text-muted);
+}
+
 .eyebrow {
   display: inline-flex;
   padding: 6px 10px;
